--- a/ru/keygard.html
+++ b/ru/keygard.html
@@ -88,17 +88,17 @@
     <header class="page-header">
         <!-- Horizontal Menu Start-->
         <nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
-      <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="#head-area"><img style="width: 150px; height: 60px;" src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
+      <a class="navbar-brand " href="#head-area"><img style="width: 150px; height: 60px;" src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
           <div id="navigation" class="navbar-nav ml-auto">
               <ul class="navbar-nav mt-1">
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.1s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#about">О нас</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2">
                       <a class="dropdown-toggle white" href="index.html#problem-solution" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Функции</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="Private-Messenger.html">Личный мессенджер</a>
@@ -109,19 +109,19 @@
                           <a class="dropdown-item" href="DVPN.html">DVPN</a>
                       </div>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
+                  <li class="nav-item ">
                     <a class="nav-link" href="security.html">Безопасность</a>
                 </li>
                   <!-- <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
                       <a class="nav-link" href="index.html#token-distribution">Распределение жетонов</a>
                   </li> -->
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.4s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#token-sale-mobile-app">Продажа токенов</a>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.5s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#roadmap">Карта дорог</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2 ">
                       <a class="dropdown-toggle white" href="#" role="button" id="more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Подробнее</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="index.html#mobile-app">App</a>
@@ -131,16 +131,8 @@
                           <a class="dropdown-item" href="jobs.html">Работа</a>
                       </div>
                   </li>
-                  <!-- <li class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
-                      <a class="dropdown-toggle" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-us"></span> EN</a>
-                      <div class="dropdown-menu" aria-labelledby="language">
-                          <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-de"></span> GN</a>
-                          <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-es"></span> SP</a>
-                          <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-mq"></span> FR</a>
-                      </div>
-                  </li> -->
 
-                  <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
+                  <li style="border: 2;" class="dropdown show mr-4 ">
                     <a class="dropdown-toggle   border rounded border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> Ru</a>
                     <div class="dropdown-menu" aria-labelledby="language">
                         <a class="dropdown-item  text-primary-base" href="../keygard.html"> English </a>
@@ -154,7 +146,7 @@
               </ul>
               <span id="slide-line"></span>
               <form class="form-inline mt-2 mt-md-0">
-                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 animated" data-animation="fadeInDown" data-animation-delay="1.8s" href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Войти</a>
+                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0" href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Войти</a>
               </form>
           </div>
       </div>
@@ -172,11 +164,11 @@
             <div class="max-w-screen-2xl mx-auto px-8 lg:px-20">
                 <div class="grid grid-cols-12 gap-12">
                     <div class="col-span-12 lg:col-span-7">
-                        <h1 style="color: #fff;" class="leading-tight font-display text-6xl xl:text-7xl 2xl:text-8xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Дополнительная аппаратная безопасность с KeyPass для защиты вашего кошелька
+                        <h1 style="color: #fff;" class="leading-tight font-display text-6xl xl:text-7xl 2xl:text-8xl ">Дополнительная аппаратная безопасность с KeyPass для защиты вашего кошелька
                         </h1>
-                        <p style="color: #fff;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Поднимите свою безопасность на новый уровень с помощью KeyCard - дополнительного аппаратного расширения для вашего кошелька.  KeyCard обеспечивает бесконтактное и более удобное использование - она служит физическим расширением для защиты ваших цифровых активов, средств и данных. </p>
+                        <p style="color: #fff;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal ">Поднимите свою безопасность на новый уровень с помощью KeyCard - дополнительного аппаратного расширения для вашего кошелька.  KeyCard обеспечивает бесконтактное и более удобное использование - она служит физическим расширением для защиты ваших цифровых активов, средств и данных. </p>
               
-              <a style="padding: 1rem 3rem;margin-top: 20px;" href="form.html" class="btn  btn-gradient-purple btn-glow mr-4 mb-2 animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="1.7s">Получить ключ-карту €24,9</a>
+              <a style="padding: 1rem 3rem;margin-top: 20px;" href="form.html" class="btn  btn-gradient-purple btn-glow mr-4 mb-2 ">Получить ключ-карту €24,9</a>
                     </div>
                     <div class="col-span-12 lg:col-span-5">
                         <div class="keycard-animate-1">
