--- a/it/faq.html
+++ b/it/faq.html
@@ -37,17 +37,17 @@
     <header class="page-header">
         <!-- Horizontal Menu Start-->
         <nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
-      <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="#head-area"><img style="width: 160px; height: 60px;" src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
+      <a class="navbar-brand " href="#head-area"><img style="width: 160px; height: 60px;" src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
           <div id="navigation" class="navbar-nav ml-auto">
               <ul class="navbar-nav mt-1">
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.1s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#about">Missione</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2 ">
                       <a class="dropdown-toggle white" href="index.html#problem-solution" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Caratteristiche</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="Private-Messenger.html">Messaggero privato</a>
@@ -58,19 +58,19 @@
                           <a class="dropdown-item" href="DVPN.html">DVPN</a>
                       </div>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
+                  <li class="nav-item ">
                     <a class="nav-link" href="security.html">Sicurezza</a>
                 </li>
                   <!-- <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
                       <a class="nav-link" href="index.html#token-distribution">Distribuzione dei gettoni</a>
                   </li> -->
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.4s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#token-sale-mobile-app">Vendita di token</a>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.5s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#roadmap">Tabella di marcia</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2 ">
                       <a class="dropdown-toggle white" href="#" role="button" id="more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">più</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="index.html#mobile-app">App</a>
@@ -80,7 +80,7 @@
                           <a class="dropdown-item" href="jobs.html">Lavori</a>
                       </div>
                   </li>
-                  <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
+                  <li style="border: 2;" class="dropdown show mr-4 ">
                     <a class="dropdown-toggle   border rounded border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> It</a>
                     <div class="dropdown-menu" aria-labelledby="language">
                         <a class="dropdown-item  text-primary-base" href="../faq.html"> English </a>
@@ -96,7 +96,7 @@
               </ul>
               <span id="slide-line"></span>
               <form class="form-inline mt-2 mt-md-0">
-                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 animated" data-animation="fadeInDown" data-animation-delay="1.8s" href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Accedi</a>
+                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 " href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Accedi</a>
               </form>
           </div>
       </div>
@@ -108,33 +108,33 @@
             <section id="contact" class="contact section-padding">
                 <div class="container">
                     <div class="heading text-center">
-                        <div class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
+                        <div class="">
                             <h6 class="sub-title">UNISCITI A NOI</h6>
                             <h2 class="title">Contatta</h2>
                         </div>
-                        <p class="content-desc animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">Avete domande? Siamo felici di aiutarvi.</p>
+                        <p class="content-desc ">Avete domande? Siamo felici di aiutarvi.</p>
                     </div>
                     <div class="row">
                         <div class="col-xl-8 col-md-12 mx-auto">
                             <ul class="list-unstyled contact-info pb-5 mb-5">
-                                <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">
+                                <li class="">
                                     <i class="ti-headphone"></i>
                                     <span class="ml-1">+44 0123 4567</span>
                                 </li>
-                                <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
+                                <li class="">
                                     <i class="ti-email"></i>
                                     <span class="ml-1">infopcnp@gmail.com</span>
                                 </li>
-                                <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s">
+                                <li class="">
                                     <i class="ti-comment-alt"></i>
                                     <span class="ml-1">Unisciti a noi su Telegram</span>
                                 </li>
                             </ul>
                             <form action="#" method="post" accept-charset="utf-8" class="text-center">
-                                <input type="text" class="form-control animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s" name="name" placeholder="Il tuo nome">
-                                <input type="text" class="form-control animated" data-animation="fadeInUpShorter" data-animation-delay="0.9s" name="mail" placeholder="La tua posta">
-                                <input type="text" class="form-control animated" data-animation="fadeInUpShorter" data-animation-delay="1.0s" name="message" placeholder="Il tuo massaggio">
-                                <button type="submit" class="btn btn-lg btn-gradient-purple btn-glow animated" data-animation="fadeInUpShorter" data-animation-delay="1.1s">Inviare un messaggio</button>
+                                <input type="text" class="form-control " name="name" placeholder="Il tuo nome">
+                                <input type="text" class="form-control " name="mail" placeholder="La tua posta">
+                                <input type="text" class="form-control " name="message" placeholder="Il tuo massaggio">
+                                <button type="submit" class="btn btn-lg btn-gradient-purple btn-glow ">Inviare un messaggio</button>
                             </form>
                         </div>
                     </div>
