--- a/it/security.html
+++ b/it/security.html
@@ -86,17 +86,17 @@
 	<header class="page-header">
         <!-- Horizontal Menu Start-->
         <nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
-      <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="#head-area"><img style="width: 160px; height: 60px;" src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
+      <a class="navbar-brand " href="#head-area"><img style="width: 160px; height: 60px;" src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
           <div id="navigation" class="navbar-nav ml-auto">
               <ul class="navbar-nav mt-1">
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.1s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#about">Missione</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2 ">
                       <a class="dropdown-toggle white" href="index.html#problem-solution" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Caratteristiche</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="Private-Messenger.html">Messaggero privato</a>
@@ -107,19 +107,19 @@
                           <a class="dropdown-item" href="DVPN.html">DVPN</a>
                       </div>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
+                  <li class="nav-item ">
                     <a class="nav-link" href="security.html">Sicurezza</a>
                 </li>
                   <!-- <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
                       <a class="nav-link" href="index.html#token-distribution">Distribuzione dei gettoni</a>
                   </li> -->
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.4s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#token-sale-mobile-app">Vendita di token</a>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.5s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#roadmap">Tabella di marcia</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2 ">
                       <a class="dropdown-toggle white" href="#" role="button" id="more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">più</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="index.html#mobile-app">App</a>
@@ -129,7 +129,7 @@
                           <a class="dropdown-item" href="jobs.html">Lavori</a>
                       </div>
                   </li>
-                  <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
+                  <li style="border: 2;" class="dropdown show mr-4 ">
                     <a class="dropdown-toggle   border rounded border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> It</a>
 					<div class="dropdown-menu" aria-labelledby="language">
 						<a class="dropdown-item  text-primary-base" href="../security.html"> English </a>
@@ -145,7 +145,7 @@
               </ul>
               <span id="slide-line"></span>
               <form class="form-inline mt-2 mt-md-0">
-                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 animated" data-animation="fadeInDown" data-animation-delay="1.8s" href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Accedi</a>
+                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 " href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Accedi</a>
               </form>
           </div>
       </div>
@@ -165,11 +165,11 @@
 			<div class="grid md:grid-cols-2">
 				<div class="relative px-8 self-center xl:mb-32">
 					<span class="w-screen absolute -z-1 right-0 h-full"></span>
-					<h1 style="color: rgb(255, 255, 255); animation-delay: 1.2s; opacity: 1;" class="leading-tight font-display text-6xl xl:text-7xl 2xl:text-8xl animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.7s">Comunicazione sicura attraverso la decentralizzazione </h1>
-					<p style="color: rgb(255, 255, 255); animation-delay: 1.5s; opacity: 1;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="1s">
+					<h1 style="color: rgb(255, 255, 255); animation-delay: 1.2s; opacity: 1;" class="leading-tight font-display text-6xl xl:text-7xl 2xl:text-8xl ">Comunicazione sicura attraverso la decentralizzazione </h1>
+					<p style="color: rgb(255, 255, 255); animation-delay: 1.5s; opacity: 1;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal ">
 						PCNP mira ad essere uno strumento di comunicazione decentralizzato pragmatico - Il nostro sistema elimina automaticamente tutti i punti di strozzatura di terze parti per ridurre al minimo i potenziali vettori di attacco di hacking. 
 					</p> 
-                    <p style="color: rgb(255, 255, 255); animation-delay: 1.5s; opacity: 1;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="1s">
+                    <p style="color: rgb(255, 255, 255); animation-delay: 1.5s; opacity: 1;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal ">
 						Web 3.0 Browser ti dà la massima autorità per le transazioni di fondi e la messaggistica altamente privata senza interferenze di terze parti. PCNP è un software sicuro a prova di hacking, senza censura di terzi e infallibile. Controllate di più su come PCNP serve con la migliore sicurezza per i suoi utenti.
 					</p>
 					
@@ -180,7 +180,7 @@
 							<source src="../video/wallet-intro.webm" type="video/webm">
 							<source src="../video/wallet-intro.mp4" type="video/mp4">
 						</video>
-						<img class="animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="1.1s" src="../theme-assets/images/wallet-intro-2x.png" style="animation-delay: 1.6s; opacity: 1;">
+						<img class="" src="../theme-assets/images/wallet-intro-2x.png" style="animation-delay: 1.6s; opacity: 1;">
 					</div>
 				</div>
 			</div>
