--- a/pd/index.html
+++ b/pd/index.html
@@ -69,17 +69,17 @@
     <header class="page-header">
         <!-- Horizontal Menu Start-->
         <nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
-      <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="#head-area"><img src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
+      <a class="navbar-brand " href="#head-area"><img src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
           <div id="navigation" class="navbar-nav ml-auto">
               <ul class="navbar-nav mt-1">
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.1s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#about">O aplikacji</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2 ">
                       <a class="dropdown-toggle white" href="index.html#problem-solution" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Cechy</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="Private-Messenger.html">Prywatny komunikator</a>
@@ -90,19 +90,19 @@
                           <a class="dropdown-item" href="DVPN.html">DVPN</a>
                       </div>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
+                  <li class="nav-item ">
                     <a class="nav-link" href="security.html">Bezpieczeństwo</a>
                 </li>
                   <!-- <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
                       <a class="nav-link" href="index.html#token-distribution">Dystrybucja tokenów</a>
                   </li> -->
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.4s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#token-sale-mobile-app">Sprzedaż tokenów</a>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.5s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#roadmap">Mapa drogowa</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2 ">
                       <a class="dropdown-toggle white" href="#" role="button" id="more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Więcej</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="index.html#mobile-app">App</a>
@@ -112,7 +112,7 @@
                           <a class="dropdown-item" href="jobs.html">Praca</a>
                       </div>
                   </li>
-                  <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
+                  <li style="border: 2;" class="dropdown show mr-4 ">
                     <a class="dropdown-toggle   border rounded border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> Pl</a>
                       <div class="dropdown-menu" aria-labelledby="language">
                           <a class="dropdown-item text-primary-base" href="../index.html"> English </a>
@@ -126,7 +126,7 @@
               </ul>
               <span id="slide-line"></span>
               <form class="form-inline mt-2 mt-md-0">
-                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 animated" data-animation="fadeInDown" data-animation-delay="1.8s" href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Zaloguj się</a>
+                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 " href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Zaloguj się</a>
               </form>
           </div>
       </div>
@@ -149,13 +149,13 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-md-12">
                         <div class="banner-content pt-5">
-                            <h1 class="best-Template animated" data-animation="fadeInUpShorter" data-animation-delay="1.5s">Protokół PCN zapewnia najwyższą  <br class="d-none d-xl-block">jakość Doświadczenie użytkownika  <br class="d-none d-xl-block">z Niezniszczalne bezpieczeństwo</h1>
-                            <h3 class="d-block white animated" data-animation="fadeInUpShorter" data-animation-delay="1.6s">Protokół PCN jest pierwszą siecią komunikacyjną zbudowaną na <br class="d-none d-xl-block">Blockchain, aby zapewnić niezawodne bezpieczeństwo
+                            <h1 class="best-Template ">Protokół PCN zapewnia najwyższą  <br class="d-none d-xl-block">jakość Doświadczenie użytkownika  <br class="d-none d-xl-block">z Niezniszczalne bezpieczeństwo</h1>
+                            <h3 class="d-block white ">Protokół PCN jest pierwszą siecią komunikacyjną zbudowaną na <br class="d-none d-xl-block">Blockchain, aby zapewnić niezawodne bezpieczeństwo
                                 dla <br class="d-none d-xl-block"> nieśledzonego korzystania z Internetu przez użytkowników <br class="d-none d-xl-block">  DVPN
                                 wykorzystując najnowszą technologię Web 3.0. </h3>
                             <div class="mt-5">
-                                <a href="#token-sale-mobile-app" class="btn btn-lg btn-gradient-purple btn-glow mr-4 mb-2 animated" data-animation="fadeInUpShorter" data-animation-delay="1.7s">Token zakupu</a>
-                                <a href="#whitepaper" class="btn btn-lg btn-gradient-purple btn-glow mb-2 animated" data-animation="fadeInUpShorter" data-animation-delay="1.8s">Whitepaper</a>
+                                <a href="#token-sale-mobile-app" class="btn btn-lg btn-gradient-purple btn-glow mr-4 mb-2 ">Token zakupu</a>
+                                <a href="#whitepaper" class="btn btn-lg btn-gradient-purple btn-glow mb-2 ">Whitepaper</a>
                             </div>
                         </div>
                     </div>
@@ -1086,7 +1086,11 @@ jednocześnie aktualizowane kursy
           <script type="text/javascript" src="../src/js/scripts/footerline.js"></script> 
  
            
-
+          <script src="../theme-assets/js/jquery-3.2.1.min.js"></script>
+<script src="../theme-assets/js/animate.js"></script>
+<script src="../js/jquery.waypoints.min.js"></script>
+<script src="../theme-assets/js/jquery.waypoints.min.js"></script>
+<script src="../theme-assets/js/easy-waypoint-animate.js"></script>
 
     
      <script src="../theme-assets/vendors/vendors.min.js"></script> 
