--- a/pd/keygard.html
+++ b/pd/keygard.html
@@ -88,17 +88,17 @@
     <header class="page-header">
         <!-- Horizontal Menu Start-->
         <nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
-      <a  class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="#head-area"><img style="width: 130px; height: 60px;" src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
+      <a  class="navbar-brand " href="#head-area"><img style="width: 130px; height: 60px;" src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
           <div id="navigation" class="navbar-nav ml-auto">
               <ul class="navbar-nav mt-1">
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.1s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#about">O aplikacji</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2 ">
                       <a class="dropdown-toggle white" href="index.html#problem-solution" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Cechy</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="Private-Messenger.html">Prywatny komunikator</a>
@@ -109,19 +109,19 @@
                           <a class="dropdown-item" href="DVPN.html">DVPN</a>
                       </div>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
+                  <li class="nav-item ">
                     <a class="nav-link" href="security.html">Bezpieczeństwo</a>
                 </li>
                   <!-- <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
                       <a class="nav-link" href="index.html#token-distribution">Dystrybucja tokenów</a>
                   </li> -->
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.4s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#token-sale-mobile-app">Sprzedaż tokenów</a>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.5s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#roadmap">Mapa drogowa</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2 ">
                       <a class="dropdown-toggle white" href="#" role="button" id="more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Więcej</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="index.html#mobile-app">App</a>
@@ -131,7 +131,7 @@
                           <a class="dropdown-item" href="jobs.html">Praca</a>
                       </div>
                   </li>
-                  <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
+                  <li style="border: 2;" class="dropdown show mr-4 ">
                     <a class="dropdown-toggle   border rounded border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> Pl</a>
                     <div class="dropdown-menu" aria-labelledby="language">
 						<a class="dropdown-item  text-primary-base" href="../keygard.html"> English </a>
@@ -145,7 +145,7 @@
               </ul>
               <span id="slide-line"></span>
               <form class="form-inline mt-2 mt-md-0">
-                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 animated" data-animation="fadeInDown" data-animation-delay="1.8s" href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Zaloguj się</a>
+                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 " href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Zaloguj się</a>
               </form>
           </div>
       </div>
@@ -163,11 +163,11 @@
             <div class="max-w-screen-2xl mx-auto px-8 lg:px-20">
                 <div class="grid grid-cols-12 gap-12">
                     <div class="col-span-12 lg:col-span-7">
-                        <h1 style="color: #fff;" class="leading-tight font-display text-6xl xl:text-7xl 2xl:text-8xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Dodatkowe zabezpieczenia sprzętowe z KeyPass do ochrony portfela
+                        <h1 style="color: #fff;" class="leading-tight font-display text-6xl xl:text-7xl 2xl:text-8xl ">Dodatkowe zabezpieczenia sprzętowe z KeyPass do ochrony portfela
                         </h1>
-                        <p style="color: #fff;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Przenieś swoje bezpieczeństwo na wyższy poziom dzięki KeyCard, która zapewnia dodatkowe rozszerzenia sprzętowe dla Twojego portfela.  KeyCard zapewnia bezdotykowe i wygodniejsze użytkowanie - służy jako fizyczne rozszerzenie zabezpieczające Twoje cyfrowe aktywa, fundusze i dane. </p>
+                        <p style="color: #fff;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal ">Przenieś swoje bezpieczeństwo na wyższy poziom dzięki KeyCard, która zapewnia dodatkowe rozszerzenia sprzętowe dla Twojego portfela.  KeyCard zapewnia bezdotykowe i wygodniejsze użytkowanie - służy jako fizyczne rozszerzenie zabezpieczające Twoje cyfrowe aktywa, fundusze i dane. </p>
               
-              <a style="padding: 1rem 3rem;margin-top: 20px;" href="form.html" class="btn  btn-gradient-purple btn-glow mr-4 mb-2 animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="1.7s">Zdobądź kartę magnetyczną 24,9 €</a>
+              <a style="padding: 1rem 3rem;margin-top: 20px;" href="form.html" class="btn  btn-gradient-purple btn-glow mr-4 mb-2 ">Zdobądź kartę magnetyczną 24,9 €</a>
                     </div>
                     <div class="col-span-12 lg:col-span-5">
                         <div class="keycard-animate-1">
