--- a/ru/Web3-Browser.html
+++ b/ru/Web3-Browser.html
@@ -86,17 +86,17 @@
 	<header class="page-header">
         <!-- Horizontal Menu Start-->
         <nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
-      <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="#head-area"><img style="width: 150px; height: 60px;" src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
+      <a class="navbar-brand " href="#head-area"><img style="width: 150px; height: 60px;" src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
           <div id="navigation" class="navbar-nav ml-auto">
               <ul class="navbar-nav mt-1">
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.1s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#about">О нас</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2">
                       <a class="dropdown-toggle white" href="index.html#problem-solution" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Функции</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="Private-Messenger.html">Личный мессенджер</a>
@@ -107,19 +107,19 @@
                           <a class="dropdown-item" href="DVPN.html">DVPN</a>
                       </div>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
+                  <li class="nav-item ">
                     <a class="nav-link" href="security.html">Безопасность</a>
                 </li>
                   <!-- <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
                       <a class="nav-link" href="index.html#token-distribution">Распределение жетонов</a>
                   </li> -->
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.4s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#token-sale-mobile-app">Продажа токенов</a>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.5s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#roadmap">Карта дорог</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2 ">
                       <a class="dropdown-toggle white" href="#" role="button" id="more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Подробнее</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="index.html#mobile-app">App</a>
@@ -129,16 +129,8 @@
                           <a class="dropdown-item" href="jobs.html">Работа</a>
                       </div>
                   </li>
-                  <!-- <li class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
-                      <a class="dropdown-toggle" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-us"></span> EN</a>
-                      <div class="dropdown-menu" aria-labelledby="language">
-                          <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-de"></span> GN</a>
-                          <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-es"></span> SP</a>
-                          <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-mq"></span> FR</a>
-                      </div>
-                  </li> -->
 
-                  <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
+                  <li style="border: 2;" class="dropdown show mr-4 ">
                     <a class="dropdown-toggle   border rounded border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> Ru</a>
 					<div class="dropdown-menu" aria-labelledby="language">
 						<a class="dropdown-item  text-primary-base" href="../Web3-Browser.html"> English </a>
@@ -152,7 +144,7 @@
               </ul>
               <span id="slide-line"></span>
               <form class="form-inline mt-2 mt-md-0">
-                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 animated" data-animation="fadeInDown" data-animation-delay="1.8s" href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Войти</a>
+                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 " href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Войти</a>
               </form>
           </div>
       </div>
@@ -171,11 +163,11 @@
 			<div class="grid md:grid-cols-2">
 				<div class="relative px-8 self-center xl:mb-32">
 					<span class="w-screen absolute -z-1 right-0 h-full"></span>
-					<h1 style="color: #fff;" class="leading-tight font-display text-6xl xl:text-7xl 2xl:text-8xl animated" data-animation="fadeInUpShorter" data-animation-delay="1s">Частный и безопасный браузер Web3 с бесплатным VPN-сервисом</h1>
-					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal animated" data-animation="fadeInUpShorter" data-animation-delay="1.2s">
+					<h1 style="color: #fff;" class="leading-tight font-display text-6xl xl:text-7xl 2xl:text-8xl ">Частный и безопасный браузер Web3 с бесплатным VPN-сервисом</h1>
+					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal ">
 						Доступ к новейшим defi dapps, биржам, торговым площадкам, играм и многому другому с помощью Web3 Browser <br>   <br> Скоро на
 					</p>
-					<div class="flex items-center -ml-12 mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="1.2s">
+					<div class="flex items-center -ml-12 mt-12 ">
 						<a src="https://apps.apple.com/us/app/PCNP-private-communication/id1178893006" target="_blank" rel="noopener" id="official:ios" class="ml-12 app-download"><img src="../theme-assets/images/app-store.svg"></a>
 						<a src="https://play.google.com/store/apps/details?id=im.PCNP.ethereum" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download"><img src="../theme-assets/images/google-play.svg"></a>
 						<a src="https://PCNP-im-files.ams3.cdn.digitaloceanspaces.com/PCNPIm-Mobile-v1.14.0-d1a3a2.apk" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download"><img src="../theme-assets/images/apk.svg"></a>
@@ -184,7 +176,7 @@
 				</div>
 				<div class="relative mt-24 md:mt-0">
 					<div class="md:-mt-24 mx-auto flex justify-center items-center md:block md:pt-20">
-						<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.2s"  src="../theme-assets/images/pcn0- Copy.png">
+						<img class=""  src="../theme-assets/images/pcn0- Copy.png">
 					</div>
 				</div>
 			</div>
