--- a/ru/index.html
+++ b/ru/index.html
@@ -76,10 +76,10 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
           <div id="navigation" class="navbar-nav ml-auto">
               <ul class="navbar-nav mt-1">
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.1s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#about">О нас</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2 ">
                       <a class="dropdown-toggle white" href="index.html#problem-solution" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Функции</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="Private-Messenger.html">Личный мессенджер</a>
@@ -90,19 +90,19 @@
                           <a class="dropdown-item" href="DVPN.html">DVPN</a>
                       </div>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
+                  <li class="nav-item ">
                     <a class="nav-link" href="security.html">Безопасность</a>
                 </li>
                   <!-- <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
                       <a class="nav-link" href="index.html#token-distribution">Распределение жетонов</a>
                   </li> -->
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.4s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#token-sale-mobile-app">Продажа токенов</a>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.5s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#roadmap">Карта дорог</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2 ">
                       <a class="dropdown-toggle white" href="#" role="button" id="more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Подробнее</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="index.html#mobile-app">App</a>
@@ -121,7 +121,7 @@
                       </div>
                   </li> -->
 
-                  <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
+                  <li style="border: 2;" class="dropdown show mr-4 ">
                     <a class="dropdown-toggle   border rounded border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> Ru</a>
                       <div class="dropdown-menu" aria-labelledby="language">
                           <a class="dropdown-item text-primary-base" href="../index.html"> English </a>
@@ -135,7 +135,7 @@
               </ul>
               <span id="slide-line"></span>
               <form class="form-inline mt-2 mt-md-0">
-                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 animated" data-animation="fadeInDown" data-animation-delay="1.8s" href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Войти</a>
+                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0" href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Войти</a>
               </form>
           </div>
       </div>
@@ -158,15 +158,15 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-md-12">
                         <div class="banner-content pt-5">
-                            <h1 class="best-Template animated" data-animation="fadeInUpShorter" data-animation-delay="1.5s">Протокол PCN обеспечивает  <br class="d-none d-xl-block">максимальную
+                            <h1 class="best-Template">Протокол PCN обеспечивает  <br class="d-none d-xl-block">максимальную
                                 пользовательский  <br class="d-none d-xl-block">опыт мс
                                 Непревзойденная <br> безопасность</h1>
-                            <h3 class="d-block white animated" data-animation="fadeInUpShorter" data-animation-delay="1.6s">Протокол PCN - это первая коммуникационная сеть, построенная на снове
+                            <h3 class="d-block white ">Протокол PCN - это первая коммуникационная сеть, построенная на снове
                                 система Blockchain  <br class="d-none d-xl-block"> для обеспечения надежной безопасности <br class="d-none d-xl-block">не отслеживаемого использования интернета <br class="d-none d-xl-block "> пользователями с помощью DVPN  <br class="d-none d-xl-block"> 
                                 с использованием новейшей технологии Web 3.0. </h3>
                             <div class="mt-5">
-                                <a href="#token-sale-mobile-app" class="btn btn-lg btn-gradient-purple btn-glow mr-4 mb-2 animated" data-animation="fadeInUpShorter" data-animation-delay="1.7s">Токен покупки</a>
-                                <a href="#whitepaper" class="btn btn-lg btn-gradient-purple btn-glow mb-2 animated" data-animation="fadeInUpShorter" data-animation-delay="1.8s">Whitepaper</a>
+                                <a href="#token-sale-mobile-app" class="btn btn-lg btn-gradient-purple btn-glow mr-4 mb-2">Токен покупки</a>
+                                <a href="#whitepaper" class="btn btn-lg btn-gradient-purple btn-glow mb-2 ">Whitepaper</a>
                             </div>
                         </div>
                     </div>
@@ -1096,7 +1096,11 @@
           <script type="text/javascript" src="../src/js/scripts/footerline.js"></script> 
  
            
-
+          <script src="../theme-assets/js/jquery-3.2.1.min.js"></script>
+<script src="../theme-assets/js/animate.js"></script>
+<script src="../js/jquery.waypoints.min.js"></script>
+<script src="../theme-assets/js/jquery.waypoints.min.js"></script>
+<script src="../theme-assets/js/easy-waypoint-animate.js"></script>
 
     
      <script src="../theme-assets/vendors/vendors.min.js"></script> 
