--- a/Web3-Browser.html
+++ b/Web3-Browser.html
@@ -26,7 +26,7 @@
     <!-- END VENDOR CSS-->
     <!-- END CRYPTO CSS-->
     <!-- BEGIN Page Level CSS-->
-    <link rel="stylesheet" type="text/css" href="theme-assets/css/PCN-3d-animation.css">
+    <link rel="stylesheet" type="text/css" href="theme-assets/css/PCN-3d-animation2.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/monokai-sublime.min.css">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,600|IBM+Plex+Sans:400,500,700" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
@@ -35,7 +35,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- END Custom CSS-->
     <!-- <link rel="stylesheet" href="pri-mess.css">  -->
-    <link rel="stylesheet" href="./theme-assets/css/keygard.css">
+
     <link rel="manifest" href="/theme-assets/manifest.json">
     <meta name="msapplication-TileColor" content="#4360DF">
     <meta name="msapplication-TileImage" content="/theme-assets/images/ms-icon-144x144.png"> 
@@ -461,33 +461,36 @@
 	  
 	  
 	</footer>
-  
-
-
-
+	
+	
+	
 	<script src="./theme-assets/js/jquery-3.2.1.min.js"></script>
-	<script src="./theme-assets/js/animate.js"></script>
-			<script src="js/jquery.waypoints.min.js"></script>
-			<script src="./theme-assets/js/jquery.waypoints.min.js"></script>
-			<script src="./theme-assets/js/easy-waypoint-animate.js"></script>
-		 <script src="theme-assets/vendors/vendors.min.js"></script> 
-
-    <!-- BEGIN VENDOR JS-->
-	<script type="text/javascript" src="./src/js/scripts/footerline.js"></script>
-    <script src="theme-assets/vendors/vendors.min.js"></script>
-    <!-- BEGIN VENDOR JS-->
-    <!-- BEGIN PAGE VENDOR JS-->
-    <script src="theme-assets/vendors/flipclock/flipclock.min.js"></script>
-    <script src="theme-assets/vendors/swiper/js/swiper.min.js"></script>
-    <script src="theme-assets/vendors/particles.min.js"></script>
-    <script src="theme-assets/vendors/waypoints/jquery.waypoints.min.js"></script>
-    <!-- END PAGE VENDOR JS-->
-    <!-- BEGIN THEME JS-->
-    <script src="theme-assets/js/theme.js"></script>
-    <script src="theme-assets/js/sales-notification.js"></script>
-    <!-- END CRYPTO JS-->
-    <!-- BEGIN PAGE LEVEL JS-->
-    <script src="theme-assets/js/scripts/particles-type1.js"></script>
-    <!-- END PAGE LEVEL JS-->
+		<script src="./theme-assets/js/animate.js"></script>
+		<script src="./js/jquery.waypoints.min.js"></script>
+		<script src="./theme-assets/js/jquery.waypoints.min.js"></script>
+		<script src="./theme-assets/js/easy-waypoint-animate.js"></script>
+	
+	
+		<!-- BEGIN VENDOR JS-->
+		<script type="text/javascript" src="./src/js/scripts/footerline.js"></script>
+		<script src="theme-assets/vendors/vendors.min.js"></script>
+		<!-- BEGIN VENDOR JS-->
+		<!-- BEGIN PAGE VENDOR JS-->
+		<script src="theme-assets/vendors/flipclock/flipclock.min.js"></script>
+		<script src="theme-assets/vendors/swiper/js/swiper.min.js"></script>
+		<script src="theme-assets/vendors/particles.min.js"></script>
+		
+		<script src="theme-assets/vendors/waypoints/jquery.waypoints.min.js"></script>
+		<!-- END PAGE VENDOR JS-->
+		<!-- BEGIN THEME JS-->
+		<script src="theme-assets/js/theme.js"></script>
+		<script src="theme-assets/js/sales-notification.js"></script>
+		<!-- END CRYPTO JS-->
+		<!-- BEGIN PAGE LEVEL JS-->
+		<script src="theme-assets/js/scripts/particles-type1.js"></script>
+	
+		<!-- END PAGE LEVEL JS-->
+	
+	
 </body>
 </html>
