--- a/DVPN.html
+++ b/DVPN.html
@@ -153,7 +153,7 @@
         <div class="content-body">
           <main style="font-size: 10px !important"><!-- Header: 3D Animation -->
     <section style="margin-top: 200px;" class="head-area" id="head-area">
-        <div id="particles-js"></div>
+        <div id="5ticles-js"></div>
         <div class="head-content d-flex align-items-center">
             <div class="container">
                
@@ -563,40 +563,21 @@ Benefits -->
 
 
 <script src="./theme-assets/js/jquery-3.2.1.min.js"></script>
-<script src="./theme-assets/js/animate.js"></script>
-        <script src="js/jquery.waypoints.min.js"></script>
-        <script src="./theme-assets/js/jquery.waypoints.min.js"></script>
-        <script src="./theme-assets/js/easy-waypoint-animate.js"></script>
-     <script src="theme-assets/vendors/vendors.min.js"></script> 
-
-
-
-<!-- BEGIN VENDOR JS-->
-<script type="text/javascript" src="./src/js/scripts/footerline.js"></script>
-<script src="theme-assets/vendors/vendors.min.js"></script>
-    <script src="//cdn.jsdelivr.net/bluebird/3.5.0/bluebird.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.15.6/build/highlight.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/sticky-kit/1.1.3/sticky-kit.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
-    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"></script>
-    <script src="https://unpkg.com/scrollreveal@4.0.6/dist/scrollreveal.min.js"></script>
-    <script type="text/javascript" src="./js/main.min.js"></script>
-
-
-
+	<script src="./theme-assets/js/animate.js"></script>
+	<script src="./js/jquery.waypoints.min.js"></script>
+	<script src="./theme-assets/js/jquery.waypoints.min.js"></script>
+	<script src="./theme-assets/js/easy-waypoint-animate.js"></script>
 
 
     <!-- BEGIN VENDOR JS-->
+	<script type="text/javascript" src="./src/js/scripts/footerline.js"></script>
+    <script src="theme-assets/vendors/vendors.min.js"></script>
     <!-- BEGIN VENDOR JS-->
     <!-- BEGIN PAGE VENDOR JS-->
     <script src="theme-assets/vendors/flipclock/flipclock.min.js"></script>
     <script src="theme-assets/vendors/swiper/js/swiper.min.js"></script>
     <script src="theme-assets/vendors/particles.min.js"></script>
+	
     <script src="theme-assets/vendors/waypoints/jquery.waypoints.min.js"></script>
     <!-- END PAGE VENDOR JS-->
     <!-- BEGIN THEME JS-->
@@ -605,6 +586,13 @@ Benefits -->
     <!-- END CRYPTO JS-->
     <!-- BEGIN PAGE LEVEL JS-->
     <script src="theme-assets/js/scripts/particles-type1.js"></script>
+
     <!-- END PAGE LEVEL JS-->
+
+
+
+
+
+
 </body>
 </html>
