--- a/Secure-Crypto-Wallet.html
+++ b/Secure-Crypto-Wallet.html
@@ -508,14 +508,28 @@
 
 	<script src="./theme-assets/js/jquery-3.2.1.min.js"></script>
 	<script src="./theme-assets/js/animate.js"></script>
-			<script src="js/jquery.waypoints.min.js"></script>
-			<script src="./theme-assets/js/jquery.waypoints.min.js"></script>
-			<script src="./theme-assets/js/easy-waypoint-animate.js"></script>
-		 <script src="theme-assets/vendors/vendors.min.js"></script> 
-
+	<script src="./js/jquery.waypoints.min.js"></script>
+	<script src="./theme-assets/js/jquery.waypoints.min.js"></script>
+	<script src="./theme-assets/js/easy-waypoint-animate.js"></script>
     <!-- BEGIN VENDOR JS-->
 	<script type="text/javascript" src="./src/js/scripts/footerline.js"></script>
     <script src="theme-assets/vendors/vendors.min.js"></script>
+    <!-- BEGIN VENDOR JS-->
+    <!-- BEGIN PAGE VENDOR JS-->
+    <script src="theme-assets/vendors/flipclock/flipclock.min.js"></script>
+    <script src="theme-assets/vendors/swiper/js/swiper.min.js"></script>
+    <script src="theme-assets/vendors/particles.min.js"></script>
+	
+    <script src="theme-assets/vendors/waypoints/jquery.waypoints.min.js"></script>
+    <!-- END PAGE VENDOR JS-->
+    <!-- BEGIN THEME JS-->
+    <script src="theme-assets/js/theme.js"></script>
+    <script src="theme-assets/js/sales-notification.js"></script>
+    <!-- END CRYPTO JS-->
+    <!-- BEGIN PAGE LEVEL JS-->
+    <script src="theme-assets/js/scripts/particles-type1.js"></script>
+
+    <!-- BEGIN VENDOR JS-->
     <!-- BEGIN VENDOR JS-->
     <!-- BEGIN PAGE VENDOR JS-->
     <script src="theme-assets/vendors/flipclock/flipclock.min.js"></script>
