--- a/ru/faq.html
+++ b/ru/faq.html
@@ -317,18 +317,29 @@
   
   
 </footer>
+<script type="text/javascript" src="../src/js/scripts/footerline.js"></script> 
+	<script src="../theme-assets/js/jquery-3.2.1.min.js"></script>
+	<script src="../theme-assets/js/animate.js"></script>
+	<script src="../js/jquery.waypoints.min.js"></script>
+	<script src="../theme-assets/js/jquery.waypoints.min.js"></script>
+	<script src="../theme-assets/js/easy-waypoint-animate.js"></script>
 
-<script type="text/javascript" src="../src/js/scripts/footerline.js"></script>   
-<script src="../theme-assets/js/jquery-3.2.1.min.js"></script>
-<script src="../theme-assets/js/animate.js"></script>
-<script src="../js/jquery.waypoints.min.js"></script>
-<script src="../theme-assets/js/jquery.waypoints.min.js"></script>
-<script src="../theme-assets/js/easy-waypoint-animate.js"></script>
-<script src="../theme-assets/vendors/particles.min.js"></script>
-<script src="../theme-assets/vendors/waypoints/jquery.waypoints.min.js"></script>
-<script src="../theme-assets/js/theme.js"></script>
-<script src="../theme-assets/js/scripts/particles-type1.js"></script>
-<script type="text/javascript" src="../js/main.min.js"></script>  
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <!-- BEGIN VENDOR JS-->
+	<script type="../text/javascript" src="./src/js/scripts/footerline.js"></script>
+    <script src="../theme-assets/vendors/vendors.min.js"></script>
+    <!-- BEGIN VENDOR JS-->
+    <!-- BEGIN PAGE VENDOR JS-->
+    <script src="../theme-assets/vendors/flipclock/flipclock.min.js"></script>
+    <script src="../theme-assets/vendors/swiper/js/swiper.min.js"></script>
+    <script src="../theme-assets/vendors/particles.min.js"></script>
+	
+    <script src="../theme-assets/vendors/waypoints/jquery.waypoints.min.js"></script>
+    <!-- END PAGE VENDOR JS-->
+    <!-- BEGIN THEME JS-->
+    <script src="../theme-assets/js/theme.js"></script>
+    <!-- END CRYPTO JS-->
+    <!-- BEGIN PAGE LEVEL JS-->
+    <script src="../theme-assets/js/scripts/particles-type1.js"></script>
 </body>       
 </html>
