--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     </div>
                     <div class="col-lg-6 header-first-main-text col-md-12 ">
                         <div style="width: 570px; margin-top: 70px;" class="wpsisac-slick-carousal-wrp wpsisac-clearfix " data-conf="{&quot;slidestoshow&quot;:&quot;3&quot;,&quot;slidestoscroll&quot;:1,&quot;dots&quot;:&quot;true&quot;,&quot;arrows&quot;:&quot;true&quot;,&quot;autoplay&quot;:&quot;true&quot;,&quot;autoplay_interval&quot;:3000,&quot;speed&quot;:300,&quot;rtl&quot;:&quot;false&quot;,&quot;centermode&quot;:&quot;true&quot;,&quot;lazyload&quot;:&quot;&quot;,&quot;variablewidth&quot;:&quot;false&quot;,&quot;loop&quot;:&quot;true&quot;,&quot;hover_pause&quot;:&quot;true&quot;}">
-                            <div style="width: 600px; ;" id="wpsisac-slick-carousal-7"  class="wpsisac-slick-init wpsisac-slick-carousal design-6 wpsisac-image-fit wpsisac-center">
+                            <div style="width: 600px; margin-top: 40px !important;" id="wpsisac-slick-carousal-7"  class="wpsisac-slick-init wpsisac-slick-carousal design-6 wpsisac-image-fit wpsisac-center">
                                 <div class="wpsisac-image-slide">  
                     <a href="">	<div class="wpsisac-image-slide-wrap" style='height:400px;'>
                             <img  src="./images slider/picture1.png" alt="1-The urban farmers battling Bangalore’s jungle" />
