--- a/keygard.html
+++ b/keygard.html
@@ -562,7 +562,7 @@
     <script src="./js/jquery.waypoints.min.js"></script>
     <script src="./theme-assets/js/jquery.waypoints.min.js"></script>
     <script src="./theme-assets/js/easy-waypoint-animate.js"></script>
-
+    <script src="./js/main.min.js"></script>
 
     <!-- BEGIN VENDOR JS-->
     <script type="text/javascript" src="./src/js/scripts/footerline.js"></script>
