--- a/ru/Account-Generation.html
+++ b/ru/Account-Generation.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" href="../theme-assets/vendors/animate/animate.min.css">
     <link rel="stylesheet" type="text/css" href="../theme-assets/vendors/flipclock/flipclock.css">
     <link rel="stylesheet" type="text/css" href="../theme-assets/vendors/swiper/css/swiper.min.css">
-    <link rel="stylesheet" href="../theme-assets/css/Account-Generation.css">
+    <!-- <link rel="stylesheet" href="../theme-assets/css/Account-Generation.css"> -->
 	<link rel="stylesheet" href="../theme-assets/css/main.css">
 	<link rel="stylesheet" href="../our.css">
     <!-- END VENDOR CSS-->
