--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="our.css">
     <link rel="stylesheet" href="./theme-assets/css/main2.css">
     <link rel="stylesheet" href="./theme-assets/css/token.css">
-    <link rel='stylesheet' id='wpos-slick-style-css'  href='./theme-assets/css/slick370e.css?ver=1.4.3' type='text/css' media='all' />
+<!--    <link rel='stylesheet' id='wpos-slick-style-css'  href='./theme-assets/css/slick370e.css?ver=1.4.3' type='text/css' media='all' />-->
     <link rel='stylesheet' id='wpsisac-pro-public-style-css'  href='./theme-assets/css/wpsisac-pro-public.minfeec.css?ver=1.6.5' type='text/css' media='all' />
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script type='text/javascript' src='../wp-includes/js/jquery/jquery.minaf6c.js?ver=3.6.0' id='jquery-core-js'></script>
@@ -1289,11 +1289,11 @@
 </footer>
      
          
-         <script src="./theme-assets/js/jquery-3.2.1.min.js"></script>
+<!--         <script src="./theme-assets/js/jquery-3.2.1.min.js"></script>-->
 	<script src="./theme-assets/js/animate.js"></script>
-	<script src="./js/jquery.waypoints.min.js"></script>
-	<script src="./theme-assets/js/jquery.waypoints.min.js"></script>
-	<script src="./theme-assets/js/easy-waypoint-animate.js"></script>
+<!--	<script src="./js/jquery.waypoints.min.js"></script>-->
+<!--	<script src="./theme-assets/js/jquery.waypoints.min.js"></script>-->
+<!--	<script src="./theme-assets/js/easy-waypoint-animate.js"></script>-->
 
 
     <!-- BEGIN VENDOR JS-->
@@ -1324,7 +1324,7 @@
     <!-- <script src="theme-assets/vendors/flipclock/flipclock.min.js"></script> -->
     <!-- <script src="theme-assets/vendors/swiper/js/swiper.min.js"></script> -->
     <script src="theme-assets/vendors/particles.min.js"></script>
-    <script src="theme-assets/vendors/waypoints/jquery.waypoints.min.js"></script>
+<!--    <script src="theme-assets/vendors/waypoints/jquery.waypoints.min.js"></script>-->
     <!-- END PAGE VENDOR JS-->
     <!-- BEGIN THEME JS-->
     <script src="theme-assets/js/theme.js"></script>
@@ -1339,15 +1339,15 @@
             var Wpsisac = {"is_mobile":"0","is_rtl":"0","is_avada":"0"};</script>
 <script type='text/javascript' src='./js/wpsisac-public459e.js?ver=3.0.4' id='wpsisac-public-script-js'></script>
 
-<script type='text/javascript' src='./js/slick.min370e.js?ver=1.4.3' id='wpos-slick-jquery-js'></script>
+<!--<script type='text/javascript' src='./js/slick.min370e.js?ver=1.4.3' id='wpos-slick-jquery-js'></script>-->
 
-<script type='text/javascript' id='wpsisac-pro-public-script-js-extra'>
-/* <![CDATA[ */
-var Wpsisac_Pro = {"is_mobile":"0","is_rtl":"0","is_avada":"0"};
-/* ]]> */
-</script>
+<!--<script type='text/javascript' id='wpsisac-pro-public-script-js-extra'>-->
+<!--/* <![CDATA[ */-->
+<!--var Wpsisac_Pro = {"is_mobile":"0","is_rtl":"0","is_avada":"0"};-->
+<!--/* ]]> */-->
+<!--</script>-->
 
-<script type='text/javascript' src='./js/wpsisac-pro-public.minfeec.js?ver=1.6.5' id='wpsisac-pro-public-script-js'></script>
+<!--<script type='text/javascript' src='./js/wpsisac-pro-public.minfeec.js?ver=1.6.5' id='wpsisac-pro-public-script-js'></script>-->
    
   </body>
 </html>
