--- a/app/public/index.html
+++ b/app/public/index.html
@@ -59,6 +59,11 @@
 <script type='text/javascript' id='wpsisac-public-script-js-extra'>
   var Wpsisac = {"is_mobile":"0","is_rtl":"0","is_avada":"0"};</script>
 <script src="slick/slick2.js" id='wpsisac-public-script-js'></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sticky-kit/1.1.3/sticky-kit.min.js"></script>
+<script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"></script>
+<script src="https://unpkg.com/scrollreveal@4.0.6/dist/scrollreveal.min.js"></script>
+<script src="main/main.js"></script>
 <script>
   $(document).ready(function() {
     InitWaypointAnimations({
