--- a/keygard.html
+++ b/keygard.html
@@ -562,7 +562,13 @@
     <script src="./js/jquery.waypoints.min.js"></script>
     <script src="./theme-assets/js/jquery.waypoints.min.js"></script>
     <script src="./theme-assets/js/easy-waypoint-animate.js"></script>
-    <script src="./js/main.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sticky-kit/1.1.3/sticky-kit.min.js"></script>
+
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"></script>
+    <script src="https://unpkg.com/scrollreveal@4.0.6/dist/scrollreveal.min.js"></script>
+    <script type="text/javascript" src="./js/main.min.js"></script>
 
     <!-- BEGIN VENDOR JS-->
     <script type="text/javascript" src="./src/js/scripts/footerline.js"></script>
