--- a/index.html
+++ b/index.html
@@ -1327,7 +1327,7 @@
 <!--    <script src="theme-assets/vendors/waypoints/jquery.waypoints.min.js"></script>-->
     <!-- END PAGE VENDOR JS-->
     <!-- BEGIN THEME JS-->
-    <!-- <script src="theme-assets/js/theme.js"></script> -->
+    <script src="theme-assets/js/theme.js"></script>
     <!-- <script src="theme-assets/js/sales-notification.js"></script> -->
     <!-- END CRYPTO JS-->
     <!-- BEGIN PAGE LEVEL JS-->
