--- a/app/public/index.html
+++ b/app/public/index.html
@@ -28,7 +28,7 @@
     <link rel='stylesheet' id='wpsisac-pro-public-style-css'  href='../../theme-assets/css/wpsisac-pro-public.minfeec.css?ver=1.6.5' type='text/css' media='all' />
     <link rel='stylesheet' id='wpos-slick-style-css'  href='../../theme-assets/css/slick370e.css?ver=1.4.3' type='text/css' media='all' /> -->
 
-    <!-- <link rel="stylesheet" href="../src/css/main.css"> -->
+    <link rel="stylesheet" href="../src/css/main.css">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
