--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     <link rel="stylesheet" type="text/css" href="theme-assets/css/animate.css">
     <link rel="stylesheet" type="text/css" href="theme-assets/vendors/flipclock/flipclock.css">
     <link rel="stylesheet" type="text/css" href="theme-assets/vendors/swiper/css/swiper.min.css"> 
-    <link rel="stylesheet" href="our.css">
-    <link rel="stylesheet" href="./theme-assets/css/main2.css">
+    <!-- <link rel="stylesheet" href="our.css"> -->
+    <!-- <link rel="stylesheet" href="./theme-assets/css/main2.css"> -->
+    <!-- <link rel="stylesheet" href="./theme-assets/css/timer.css"> -->
     <link rel="stylesheet" href="./theme-assets/css/token.css">
     <!-- <link rel='stylesheet' id='wpos-slick-style-css'  href='./theme-assets/css/slick370e.css?ver=1.4.3' type='text/css' media='all' /> -->
     <!-- <link rel='stylesheet' id='wpsisac-pro-public-style-css'  href='./theme-assets/css/wpsisac-pro-public.minfeec.css?ver=1.6.5' type='text/css' media='all' /> -->
@@ -268,6 +269,7 @@
         </div>
     </div>
 </section>
+<div style="margin-top: 30px;" class="elfsight-app-6e563f79-9889-48ac-84f8-a516639e1052"></div>
 <!--/ Header: 3D Animation -->
 <!-- About -->
 <section class="about section-padding" id="about">
@@ -702,10 +704,45 @@
                                 <br class="d-none d-xl-block">July 2013. Ethereum raised money with a token sale in 2014.</p>
                         </div>
                         <div class="row align-items-center">
-                            <div class="col-xl-5 col-lg-6 col-md-12 animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="animation-delay: 0.4s; opacity: 1;">
+                            <div class="col-xl-5 col-lg-6 col-md-12 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
                                 <div class="token-sale-counter">
-                                    <h5>ICO will start in</h5>
-                                    <iframe src="https://w2.countingdownto.com/3909113" width="398" height="204" frameborder="0"></iframe>
+                                    <h5>PCN will start in</h5>
+                                    <div class="token-details text-center">
+                                        <!-- ICO Counter -->
+                                        <div class="clock-counter mb-4">
+                                            <div class="clock ml-0 mt-5 d-flex justify-content-center"></div>
+                                            <div class="message"></div>
+                                        </div>
+                                        <!-- ICO Counter -->
+                                        <!-- Progressbar -->
+                                        <div class="loading-bar mb-2 position-relative">
+                                            <div class="progres-area pb-5">
+                                                <ul class="progress-top">
+                                                    <li></li>
+                                                    <li class="pre-sale">Pre-Sale</li>
+                                                    <li>Soft Cap</li>
+                                                    <li class="bonus">Bonus</li>
+                                                    <li></li>
+                                                </ul>
+                                                <ul class="progress-bars">
+                                                    <li></li>
+                                                    <li>|</li>
+                                                    <li>|</li>
+                                                    <li>|</li>
+                                                    <li></li>
+                                                </ul>
+                                                <div class="progress">
+                                                    <div class="progress-bar progress-bar-custom" role="progressbar" style="width: 65%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                                                </div>
+                                                <div class="progress-bottom">
+                                                    <div class="progress-info">65% target raised</div>
+                                                    <div class="progress-info">1 ETH = $1000 = 3177.38 CIC</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!--/ Progressbar -->
+                                        <a href="#" class="btn btn-lg btn-glow btn-gradient-blue">Purchase Token</a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-xl-7 col-lg-6 col-md-12 mt-5 pl-4 animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="animation-delay: 0.4s; opacity: 1;">
@@ -1339,6 +1376,8 @@
             var Wpsisac = {"is_mobile":"0","is_rtl":"0","is_avada":"0"};</script>
 <script type='text/javascript' src='./js/wpsisac-public459e.js?ver=3.0.4' id='wpsisac-public-script-js'></script>
 //aqamde
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+
 
 <!-- <script type='text/javascript' src='./js/slick.min370e.js?ver=1.4.3' id='wpos-slick-jquery-js'></script>
 
