--- a/app/public/index.html
+++ b/app/public/index.html
@@ -55,8 +55,8 @@
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script src="vendors/vendors.js"></script>
-<script src="flipclock/flipclock.js"></script>
+<script src="vendors/vendors.min.js"></script>
+<script src="flipclock/flipclock.min.js"></script>
 
 <script src="theme/theme.js"></script>
 <script src="particles/particles.js"></script>
